[package]
name = "lbasedb"
version = "0.1.3"
edition = "2021"
authors = ["Alexander Khlebushchev"]
license = "MIT"
repository = "https://github.com/fomalhaut88/lbasedb"
description = "Low level DBMS in Rust focusing on datasets."

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
