[package]
name = "lbasedb"
version = "0.1.7"
edition = "2024"
authors = ["Alexander Khlebushchev"]
license = "MIT"
repository = "https://github.com/fomalhaut88/lbasedb"
description = "Low level DBMS in Rust focusing on datasets."

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
